https와 http간의 통신문제 해결중2

--- a/package.json
+++ b/package.json
@@ -40,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://JRingterm.github.io/Pokemon_Remember_UI_v1"
+  "homepage": "http://JRingterm.github.io/Pokemon_Remember_UI_v1"
 }
